# effective_waddle

./: README.md  pyproject.toml
analytics_service/: pyproject.toml
analytics_service/analytics_service/: app.py  flask_config.py
auth_service/: pyproject.toml
auth_service/auth_service/: app.py
availability_service/: pyproject.toml
availability_service/availability_service/: app.py
booking_service/: pyproject.toml
booking_service/booking_service/: app.py
subscription_service/: pyproject.toml
subscription_service/subscription_service/: app.py
