[tool.poetry]
name = "auth_service"
version = "0.0.1"
description = "Auth Service: Booking System – Simplify Your Grooming Experience"
authors = ['Farai Munashe Wande - faraiwande@gmail.com']

[tool.poetry.dependencies]
python = "^3.12.7"
Flask = "^3.1.0"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"